# HassGlass

./: .gitignore  CLAUDE.md  README.md  hacs.json  info.md  pyproject.toml  requirements-dev.txt  settings.gradle.kts
.github/workflows/: android.yml  ci.yml  hacs.yml  hassfest.yml  release.yml  tag-on-main-merge.yml
apps/glass_agent/: build.gradle.kts
apps/glass_agent/src/main/: AndroidManifest.xml
apps/glass_agent/src/main/java/dev/hassglass/agent/: AgentController.kt  AgentRuntime.kt  AgentServiceStarter.kt  AgentStartupPolicy.kt  BootReceiver.kt  HassGlassAgentService.kt  MainActivity.kt
apps/glass_agent/src/main/res/values/: colors.xml
apps/glass_agent/src/test/java/dev/hassglass/agent/: AgentControllerTest.kt  AgentRuntimeTest.kt  (+2 more)
custom_components/hassglass/: __init__.py  audio.py  auth.py  binary_sensor.py  button.py  card_mapping.py  cards.py  config_flow.py  const.py  device.py  entity.py  event.py  hub.py  hud.py  manifest.json  media_player.py  notify.py  pairing.py  pairing_view.py  pipeline_bridge.py  protocol.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  tts_relay.py  ws_server.py
custom_components/hassglass/blueprints/: alarm_to_hud.yaml  doorbell_to_hud.yaml  motion_to_hud.yaml  timer_to_hud.yaml
custom_components/hassglass/translations/: en.json
docs/: ARCHITECTURE.md  PAIRING.md  PROJECT_STRUCTURE.md  ROADMAP.md
docs/superpowers/plans/: 2026-05-19-direct-wifi-agent.md
tests/: conftest.py  test_audio.py  test_auth.py  test_card_mapping.py  test_cards.py  test_config_flow.py  test_entity_availability.py  test_event.py  test_glass_agent_scaffold.py  test_hub.py  test_hud.py  test_media_player.py  test_notify.py  test_options_reload.py  test_pairing.py  test_pipeline_bridge.py  test_protocol.py  test_select.py  test_services.py  test_switch.py  test_tts_relay.py  test_ws_server.py
(+56 files in other folders)
