[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hassglass"
version = "0.0.0"
description = "Home Assistant integration for Rokid AR Glasses + Assist pipelines."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Teagan Glenn" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components.hassglass*"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["apps", "protocol"]

[tool.ruff.lint]
select = [
  "E", "F", "W",       # pycodestyle / pyflakes
  "I",                 # isort
  "B",                 # bugbear
  "UP",                # pyupgrade
  "ASYNC",             # async correctness
  "S",                 # bandit (security)
  "RUF",               # ruff-specific
  "SIM",               # simplify
  "PT",                # pytest style
  "TID",               # tidy imports
  "PL",                # pylint subset
]
ignore = [
  "PLR0913",  # too many args — HA platform setup signatures
  "S101",     # asserts ok in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
plugins = []
exclude = ["apps/", "protocol/"]

[[tool.mypy.overrides]]
module = ["homeassistant.*", "pytest_homeassistant_custom_component.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:homeassistant.*",
  # HA core sets app["hass"] for back-compat — emits aiohttp's NotAppKeyWarning.
  "ignore::aiohttp.web_exceptions.NotAppKeyWarning",
]
